@@ -1,5 +1,8 @@
 20100203
 	appl/lib/cfg.b treat \r as white space (issue 69, 70)
+	add u64int to lib9.h files that needed it
+	add sha2.c sha256block.c sha512block.c to libsec/port and include/libsec.h
+	add new sha functions to module/keyring.m and libinterp/keyring.c
 20100115
 	appl/cmd/tarfs.b man/4/tarfs changes to permission handling from mechiel [issue 220]
 	appl/spree/mkfile add explicit -I$ROOT/module [issue 209, powerman]
